Add instructions to STMicroelectronics tools.